feat: wip withdrawal endpoint
